<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="login.RegisterActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/deze2"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:autofillHints=""
        tools:ignore="RtlHardcoded,RtlSymmetry,TextFields"
        android:paddingStart="2dp"
        android:drawableStart="@drawable/username"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/password"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType=""
        tools:ignore="TextFields"
        android:drawableLeft="@drawable/password"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/password"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType=""
        tools:ignore="TextFields"
        android:drawableLeft="@drawable/password"
        tools:targetApi="o" />
    <Button
        android:id="@+id/button_register"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:text="@string/register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textColor="#ffffff"
        android:text="@string/already_registered"/>

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:textColor="#04ea00"
        android:textSize="16sp"
        android:text="@string/login"
        tools:ignore="RtlSymmetry"
        android:paddingLeft="10dp" />


</android.support.v7.widget.FitWindowsLinearLayout>